<resources>
    <string name="app_name">SharedPreferencesEjercicio</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ingresa_un_numero_entero">Ingresa un numero entero</string>
    <string name="texto_almacenado">Texto Almacenado:</string>
    <string name="ingresa_un_texto">Ingresa un texto</string>
    <string name="valor_entero_almacenado">Valor entero almacenado</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="ingresa_un_numero_decimal">Ingresa un numero decimal</string>
    <string name="texto_numero_decimal_almacenado">Valor decimal almacenado:</string>
    <string name="borrar">Borrar</string>
    <string name="guardar">Guardar</string>
</resources>