<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_numero_entero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresa_un_numero_entero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_entero_almacenado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_entero_almacenado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_numero_entero" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresa_un_texto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_entero_almacenado" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_texto_almacenado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_almacenado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_texto" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_texto_almacenado" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_numero_decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresa_un_numero_decimal"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_saludo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_numero_decimal_almacenado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_numero_decimal_almacenado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_numero_decimal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_numero_decimal_almacenado" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_numero_decimal_almacenado" />

</androidx.constraintlayout.widget.ConstraintLayout>